--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <h1>App para corregir proyectos finales en el curso de JavaScript</h1>
-        <p>Si querés saber bien cómo funciona o aportar sugerencias para cambios, podés leer <a href="https://github.com/carpicoder/app-corregir-javascript">el README de esta app</a>.</p>
+        <p>Si querés saber bien cómo funciona o aportar sugerencias para cambios, podés leer <a href="https://github.com/carpicoder/app-corregir-javascript" target="_blank">el README de esta app</a>.</p>
         <div class="grid">
             <input class="nombre" type="text" name="nombre" placeholder="Nombre del estudiante" id="nombre">
             
